testsuite/tests/grammar/invalid_lexers/spacing_3.lkt
import common

lexer foo_lexer {
    @unparse_spacing(with=foo)
    family ids {
        example <- "example"
    }
}
